[gd_scene load_steps=39 format=2]

[ext_resource path="res://scripts/player_scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/player_scripts/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://assets/player/foot_placeholder.png" type="Texture" id=3]
[ext_resource path="res://assets/player/hand_placeholder.png" type="Texture" id=4]
[ext_resource path="res://assets/player/body_placeholder.png" type="Texture" id=5]
[ext_resource path="res://assets/player/head_placeholder.png" type="Texture" id=6]
[ext_resource path="res://monogram.ttf" type="DynamicFontData" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 6.25297

[sub_resource type="CircleShape2D" id=2]
radius = 42.2635

[sub_resource type="CircleShape2D" id=3]
radius = 24.9598

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "jump"

[sub_resource type="AnimationNodeBlendSpace1D" id=6]
blend_point_0/node = SubResource( 4 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 5 )
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeTimeScale" id=9]

[sub_resource type="AnimationNodeBlendTree" id=10]
graph_offset = Vector2( -274, 59 )
nodes/anim/node = SubResource( 8 )
nodes/anim/position = Vector2( -80, 140 )
nodes/output/position = Vector2( 300, 140 )
nodes/speed/node = SubResource( 9 )
nodes/speed/position = Vector2( 120, 140 )
node_connections = [ "speed", 0, "anim", "output", 0, "speed" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 381, 137 )
states/Run/node = SubResource( 10 )
states/Run/position = Vector2( 544, 137 )
transitions = [ "Idle", "Run", SubResource( 11 ), "Run", "Idle", SubResource( 12 ) ]
start_node = "Idle"
graph_offset = Vector2( -26, 57 )

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Airborne/node = SubResource( 6 )
states/Airborne/position = Vector2( 723, 137 )
states/Grounded/node = SubResource( 13 )
states/Grounded/position = Vector2( 533, 137 )
transitions = [ "Grounded", "Airborne", SubResource( 14 ), "Airborne", "Grounded", SubResource( 15 ) ]
start_node = "Grounded"
graph_offset = Vector2( 309.555, 47 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="Animation" id=19]
resource_name = "attack_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Right Hand/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -40, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "attack_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Left Hand/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 40, -10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0 ]
}

[sub_resource type="Animation" id=21]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.0, 15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Right Foot:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12.6, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Right Foot:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -41.9, -38.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Left Foot:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -14, -1.32 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Left Foot:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 41.9, 35.5991 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Body:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -19.95 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 2.07555e-007, 0.000155586, 2.38419e-007, 0.001011, 6.81768e-010 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.521569, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.521569, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Right Foot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 0 ), Vector2( 4.52, -1.87 ), Vector2( 5.79, -0.43 ), Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Right Foot:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Body:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16.74 ), Vector2( 0.66, -18.59 ), Vector2( 0, -15.39 ), Vector2( 0, -16.74 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Body:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 5.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Left Foot:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 0 ), Vector2( -4.66, -2.41 ), Vector2( -6.48, -0.22 ), Vector2( -6, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Left Foot:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 55.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=24]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -23.31 ), Vector2( 0, -23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Body:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -21.0, -18.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Left Foot:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, -2.05 ), Vector2( -6, -2.05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Left Foot:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 109.0, 104.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Right Foot:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.39, -3.85 ), Vector2( 3.39, -3.85 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Right Foot:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 104.9, 100.0 ]
}

[sub_resource type="Animation" id=25]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, -2, 1, 1, -2 ),
"update": 0,
"values": [ Vector2( -2.93, -17.6 ), Vector2( -1.9, -16.74 ), Vector2( -1.9, -15.04 ), Vector2( -2.93, -17.6 ), Vector2( -1.9, -16.74 ), Vector2( -1.9, -15.04 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Body:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( -2, 1, 1, -2, 1, 1 ),
"update": 0,
"values": [ -20.0, -15.0, -10.0, -20.0, -15.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/Left Foot:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -15.39, -5.84 ), Vector2( -10.163, -1.075 ), Vector2( 5.52, 0.1 ), Vector2( 13.59, -6.03 ), Vector2( 5.209, -0.878 ), Vector2( -4.18, 1.04 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Left Foot:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 45.0, -20.0, -50.0, 10.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Right Foot:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -50.0, 10.0, 45.0, -20.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Right Foot:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.25, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 13.59, -6.03 ), Vector2( 9.148, -1.473 ), Vector2( -4.18, 1.04 ), Vector2( -9.785, -0.765 ), Vector2( -15.39, -5.84 ), Vector2( -5.285, -1.637 ), Vector2( 5.52, -2.28 ) ]
}

[sub_resource type="DynamicFontData" id=26]
font_path = "res://monogram.ttf"

[sub_resource type="DynamicFont" id=27]
size = 40
font_data = SubResource( 26 )

[sub_resource type="DynamicFont" id=28]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 11.881, 40.838 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 25, 43 )

[sub_resource type="CapsuleShape2D" id=31]
height = 60.0

[node name="Player" type="KinematicBody2D"]
editor/display_folded = true
position = Vector2( 0, -8.11656 )
collision_layer = 0
collision_mask = 25
script = ExtResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="StateMachine"]

[node name="Right Foot" type="Sprite" parent="StateMachine/Sprites"]
position = Vector2( 5.80809, -0.24059 )
rotation = 0.105131
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Left Pin" type="PinJoint2D" parent="StateMachine/Sprites"]
position = Vector2( 7.87, -26.57 )
node_a = NodePath("../Left Hand")
node_b = NodePath("../Body/Arms")
softness = 1.0

[node name="Left Hand" type="RigidBody2D" parent="StateMachine/Sprites" groups=[
"ragdolls",
]]
position = Vector2( 10.49, -16.12 )
collision_layer = 2
collision_mask = 2
mass = 1.96
gravity_scale = 10.0
linear_damp = 5.0

[node name="Sprite" type="Sprite" parent="StateMachine/Sprites/Left Hand"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StateMachine/Sprites/Left Hand"]
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="StateMachine/Sprites"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.893617 )
position = Vector2( 0.0866591, -16.9984 )
rotation = -0.035378
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Arms" type="KinematicBody2D" parent="StateMachine/Sprites/Body"]
editor/display_folded = true
position = Vector2( 0.617449, -104.582 )
rotation = 7.45058e-009
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Sprites/Body/Arms"]
position = Vector2( 0, -6.23 )
shape = SubResource( 2 )

[node name="Left Foot" type="Sprite" parent="StateMachine/Sprites"]
position = Vector2( -5.81854, -0.313908 )
rotation = 0.128047
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Head" type="RigidBody2D" parent="StateMachine/Sprites" groups=[
"ragdolls",
]]
editor/display_folded = true
position = Vector2( 0, -51.77 )
collision_layer = 0
collision_mask = 0
gravity_scale = -128.0
linear_damp = 30.0

[node name="Sprite" type="Sprite" parent="StateMachine/Sprites/Head"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Sprites/Head"]
shape = SubResource( 3 )

[node name="Right Pin" type="PinJoint2D" parent="StateMachine/Sprites"]
position = Vector2( -7.6, -26.3 )
node_a = NodePath("../Right Hand")
node_b = NodePath("../Body/Arms")
softness = 1.0

[node name="Head Pin" type="PinJoint2D" parent="StateMachine/Sprites"]
position = Vector2( 0, -27.11 )
z_as_relative = false
node_a = NodePath("../Head")
node_b = NodePath("../Body/Arms")
softness = 0.1

[node name="Right Hand" type="RigidBody2D" parent="StateMachine/Sprites" groups=[
"ragdolls",
]]
position = Vector2( -10.49, -16.12 )
collision_layer = 4
collision_mask = 4
mass = 1.96
linear_damp = 4.0

[node name="Sprite" type="Sprite" parent="StateMachine/Sprites/Right Hand"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Sprites/Right Hand"]
shape = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="StateMachine"]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 17 )
parameters/Airborne/blend_position = 1.072
parameters/Grounded/playback = SubResource( 18 )
parameters/Grounded/Run/speed/scale = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="StateMachine"]
anims/attack_left = SubResource( 19 )
anims/attack_right = SubResource( 20 )
anims/fall = SubResource( 21 )
anims/hurt = SubResource( 22 )
anims/idle = SubResource( 23 )
anims/jump = SubResource( 24 )
anims/run = SubResource( 25 )

[node name="StateLabel" type="Label" parent="StateMachine"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -150.0
margin_right = 50.0
margin_bottom = -118.0
custom_fonts/font = SubResource( 27 )
align = 1

[node name="HitPoints" type="Label" parent="StateMachine"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = -118.0
margin_right = 50.0
margin_bottom = -120.0
custom_fonts/font = SubResource( 28 )
align = 1

[node name="PlayerShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -33 )
shape = SubResource( 29 )

[node name="GroundRaycasts" type="Node2D" parent="."]
editor/display_folded = true

[node name="CenterGroundRaycast" type="RayCast2D" parent="GroundRaycasts"]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 17

[node name="LeftGroundRaycast" type="RayCast2D" parent="GroundRaycasts"]
position = Vector2( -10, 3 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 17

[node name="RightGroundRaycast" type="RayCast2D" parent="GroundRaycasts"]
position = Vector2( 10, 3 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 17

[node name="WallRaycasts" type="Node2D" parent="."]
editor/display_folded = true

[node name="LeftWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="LeftWallRaycastTop" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -12, -56 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="LeftWallRaycastBottom" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -12, -16 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RightWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RightWallRaycastTop" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 12, -56 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="RightWallRaycastBottom" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 12, -16 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="FallingThroughPlatformArea" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0, -25 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingThroughPlatformArea"]
shape = SubResource( 30 )

[node name="AttackArea" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 35, 0 )
monitoring = false
collision_layer = 32
collision_mask = 960

[node name="Shape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 31 )

[node name="WallSlideCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.4

[connection signal="body_entered" from="StateMachine/Sprites/Left Hand" to="." method="_on_Left_Hand_body_entered"]
[connection signal="body_entered" from="StateMachine/Sprites/Right Hand" to="." method="_on_Right_Hand_body_entered"]
[connection signal="body_exited" from="FallingThroughPlatformArea" to="." method="_on_FallingThroughPlatformArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="WallSlideStickyTimer" to="StateMachine" method="_on_WallSlideStickyTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
